[package]
name = "load_balancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }  # Asynchrone Runtime
clap = "2.33.3"  # Parsing des arguments de ligne de commande
log = "0.4.14"  # Facilite les logs
env_logger = "0.9.0"  # Implémentation de log pour les environnements
